@@ -43,6 +43,8 @@
 #include <QToolButton>
 #include <QMenuBar>
 
+#define TOOLBAR_VERSION 1
+
 using namespace Global;
 
 DefaultGui::DefaultGui( QWidget * parent, Qt::WindowFlags flags )
@@ -640,6 +642,7 @@ void DefaultGui::saveConfig() {
 	set->setValue("controlwidget", ToolbarEditor::save(controlwidget) );
 	set->setValue("controlwidget_mini", ToolbarEditor::save(controlwidget_mini) );
 	set->setValue("floating_control", ToolbarEditor::save(floating_control->toolbar()) );
+	set->setValue("toolbar1_version", TOOLBAR_VERSION);
 	set->endGroup();
 #endif
 
@@ -681,7 +684,7 @@ void DefaultGui::loadConfig() {
 #if USE_CONFIGURABLE_TOOLBARS
 	QList<QAction *> actions_list = findChildren<QAction *>();
 	QStringList toolbar1_actions;
-	toolbar1_actions << "open_file" << "open_dvd" << "open_url" << "separator" << "compact" << "fullscreen"
+	toolbar1_actions << "open_file" << "open_dvd" << "open_url" << "favorites_menu" << "separator" << "compact" << "fullscreen"
                      << "separator" << "screenshot" << "separator" << "show_file_properties" << "show_playlist" 
                      << "show_preferences" << "separator" << "play_prev" << "play_next";
 
@@ -728,7 +731,13 @@ void DefaultGui::loadConfig() {
 	floatingcontrol_actions << "separator" << "fullscreen" << "mute" << "volumeslider_action" << "separator" << "timelabel_action";
 
 	set->beginGroup( "actions" );
-	ToolbarEditor::load(toolbar1, set->value("toolbar1", toolbar1_actions).toStringList(), actions_list );
+	int toolbar_version = set->value("toolbar1_version", 0).toInt();
+	if (toolbar_version >= TOOLBAR_VERSION) {
+		ToolbarEditor::load(toolbar1, set->value("toolbar1", toolbar1_actions).toStringList(), actions_list );
+	} else {
+		qDebug("DefaultGui::loadConfig: toolbar too old, loading default one");
+		ToolbarEditor::load(toolbar1, toolbar1_actions, actions_list );
+	}
 	ToolbarEditor::load(controlwidget, set->value("controlwidget", controlwidget_actions).toStringList(), actions_list );
 	ToolbarEditor::load(controlwidget_mini, set->value("controlwidget_mini", controlwidget_mini_actions).toStringList(), actions_list );
 	ToolbarEditor::load(floating_control->toolbar(), set->value("floating_control", floatingcontrol_actions).toStringList(), actions_list );
